Closed Bug 368721 Opened 18 years ago Closed 17 years ago

issues with template using simple rule

Categories

(Core :: XUL, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: enndeakin, Assigned: enndeakin)

References

()

Details

Attachments

(1 file)

The testcase at the url doesn't display anything, yet it should display the text: 'Barn Owl'.
Attached patch fix some issuesSplinter Review
The attached patch fixes some issues with this test:
 - regression which prevents conditional filter attributes on a <template> element from being parsed.
 - the 'xmlns:xxx' attributes should be skipped
 - also fixes a warning with an uninitialized value
Attachment #253364 - Flags: superreview?(jonas)
Attachment #253364 - Flags: review?(Olli.Pettay)
Without the patch the testcase displays Emu, Barn Owl, Raven, so the
filter doesn't seem to work at all.
With the patch only Barn Owl is shown.

This is a regression from what?
Point one in comment 1 is a regression from bug 285631 because the new template builder doesn't parse the attributes so the output appears unfiltered. Point 2 isn't a regression and makes the filter work properly. Both are actually separate bugs but I have combined them as they both affect the same file and testcase.


Attachment #253364 - Flags: review?(Olli.Pettay) → review+
Comment on attachment 253364 [details] [diff] [review]
fix some issues

> nsXULTemplateQueryProcessorRDF::Propagate(nsIRDFResource* aSource,
>                                           nsIRDFResource* aProperty,
>                                           nsIRDFNode* aTarget)
> {
>     // When a new assertion is added to the graph, determine any new matches
>     // that must be added to the template builder. First, iterate through all
>     // the RDF tests (<member> and <triple> tests), and find the topmost test
>     // that would be affected by the new assertion.
>-    nsresult rv;
>+    nsresult rv = NS_OK;

Change the ending |return rv| to |return NS_OK| instead.
Attachment #253364 - Flags: superreview?(jonas) → superreview+
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Flags: in-testsuite?
There's a test for this as part of the xul tests in bug 368097.
Flags: in-testsuite? → in-testsuite+
Component: XP Toolkit/Widgets: XUL → XUL
QA Contact: xptoolkit.xul → xptoolkit.widgets
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: