Bug 368721, issues with conditions on simple rules in templates,r=smaug,sr=sicking